welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: not found: type i
    if (nums[i] == lookingFor) {return j};
             ^indexOfValue:3: error: value nums of type Array[Int] does not take type parameters.
    if (nums[i] == lookingFor) {return j};
            ^indexOfValue:3: error: not found: value j
    if (nums[i] == lookingFor) {return j};
                                       ^